--- a/mysql/conf/bitrix.cnf
+++ b/mysql/conf/bitrix.cnf
@@ -1,6 +1,7 @@
 [mysqld]
 symbolic-links=0
 default-time-zone="+03:00"
+innodb_strict_mode=0
 innodb_file_per_table=1
 innodb_flush_log_at_trx_commit=2
 sync_binlog=0
