--- a/.env.copy
+++ b/.env.copy
@@ -1,5 +1,5 @@
 # путь до директории с приложением (как правило - веб-директория)
-SITE_PATH=/var/www/html
+SITE_PATH=./app
 
 # "рутовый" пароль для mysql
 MYSQL_ROOT_PASSWORD=""
@@ -8,7 +8,7 @@ MYSQL_ROOT_PASSWORD=""
 MYSQL_USER="bitrix"
 
 # пароль пользователя Битрикс
-MYSQL_PASSWORD="bitrix"
+MYSQL_PASSWORD=""
 
 # наименование БД для Битрикс
 MYSQL_DATABASE="bitrix"
