--- a/.env.copy
+++ b/.env.copy
@@ -2,13 +2,13 @@
 SITE_PATH=./app
 
 # "рутовый" пароль для mysql
-MYSQL_ROOT_PASSWORD=""
+MYSQL_ROOT_PASSWORD=
 
 # пользователь mysql для Битрикс
-MYSQL_USER="bitrix"
+MYSQL_USER=bitrix
 
 # пароль пользователя Битрикс
-MYSQL_PASSWORD=""
+MYSQL_PASSWORD=
 
 # наименование БД для Битрикс
-MYSQL_DATABASE="bitrix"
+MYSQL_DATABASE=bitrix
